# help-me-print

./: .gitignore  CMakeLists.txt  README.md  index.html  package-lock.json  package.json  tsconfig.electron.json
.github/workflows/: ci.yml  publish-api.yml  publish-apt.yml  publish-homebrew.yml  publish-winget.yml  release.yml
.lazyweb/design-improve/duplexprint-home-2026-06-10/: report.html
_CPack_Packages/Darwin/DragNDrop/help-me-print-0.1.0-Darwin/help-me-print.app/Contents/: Info.plist
_CPack_Packages/Darwin/DragNDrop/help-me-print-0.1.0-Darwin/help-me-print.app/Contents/Frameworks/: libb2.1.dylib  libgio-2.0.0.dylib  libglib-2.0.0.dylib  libgmodule-2.0.0.dylib  libgobject-2.0.0.dylib  libgraphite2.3.dylib  libgthread-2.0.0.dylib  libharfbuzz.0.dylib  liblcms2.2.dylib
_CPack_Packages/Darwin/DragNDrop/help-me-print-0.1.0-Darwin/help-me-print.app/Contents/Frameworks/QtCore.framework/Versions/A/_CodeSignature/: CodeResources
_CPack_Packages/Darwin/DragNDrop/help-me-print-0.1.0-Darwin/help-me-print.app/Contents/Frameworks/QtDBus.framework/Versions/A/: QtDBus
_CPack_Packages/Darwin/DragNDrop/help-me-print-0.1.0-Darwin/help-me-print.app/Contents/Frameworks/QtDBus.framework/Versions/A/Resources/: Info.plist
_CPack_Packages/Darwin/DragNDrop/help-me-print-0.1.0-Darwin/help-me-print.app/Contents/Frameworks/QtDBus.framework/Versions/A/_CodeSignature/: CodeResources
_CPack_Packages/Darwin/DragNDrop/help-me-print-0.1.0-Darwin/help-me-print.app/Contents/Frameworks/QtGui.framework/Versions/A/_CodeSignature/: CodeResources
_CPack_Packages/Darwin/DragNDrop/help-me-print-0.1.0-Darwin/help-me-print.app/Contents/Frameworks/QtNetwork.framework/Versions/A/: QtNetwork
_CPack_Packages/Darwin/DragNDrop/help-me-print-0.1.0-Darwin/help-me-print.app/Contents/Frameworks/QtNetwork.framework/Versions/A/Resources/: Info.plist
_CPack_Packages/Darwin/DragNDrop/help-me-print-0.1.0-Darwin/help-me-print.app/Contents/Frameworks/QtNetwork.framework/Versions/A/_CodeSignature/: CodeResources
_CPack_Packages/Darwin/DragNDrop/help-me-print-0.1.0-Darwin/help-me-print.app/Contents/Frameworks/QtOpenGL.framework/Versions/A/: QtOpenGL
_CPack_Packages/Darwin/DragNDrop/help-me-print-0.1.0-Darwin/help-me-print.app/Contents/Frameworks/QtPdf.framework/Versions/A/: QtPdf
_CPack_Packages/Darwin/DragNDrop/help-me-print-0.1.0-Darwin/help-me-print.app/Contents/Frameworks/QtQmlMeta.framework/Versions/A/: QtQmlMeta
_CPack_Packages/Darwin/DragNDrop/help-me-print-0.1.0-Darwin/help-me-print.app/Contents/Frameworks/QtQmlModels.framework/Versions/A/: QtQmlModels
_CPack_Packages/Darwin/DragNDrop/help-me-print-0.1.0-Darwin/help-me-print.app/Contents/Frameworks/QtQmlWorkerScript.framework/Versions/A/: QtQmlWorkerScript
_CPack_Packages/Darwin/DragNDrop/help-me-print-0.1.0-Darwin/help-me-print.app/Contents/MacOS/: help-me-print
_CPack_Packages/Darwin/DragNDrop/help-me-print-0.1.0-Darwin/help-me-print.app/Contents/PlugIns/iconengines/: libqsvgicon.dylib
_CPack_Packages/Darwin/DragNDrop/help-me-print-0.1.0-Darwin/help-me-print.app/Contents/PlugIns/imageformats/: libqgif.dylib  libqicns.dylib  libqico.dylib  libqjp2.dylib  libqjpeg.dylib  libqmacheif.dylib  libqmng.dylib  libqpdf.dylib  libqtga.dylib  libqtiff.dylib  libqwbmp.dylib  libqwebp.dylib
_CPack_Packages/Darwin/DragNDrop/help-me-print-0.1.0-Darwin/help-me-print.app/Contents/PlugIns/networkinformation/: libqapplenetworkinformation.dylib  libqglib.dylib
_CPack_Packages/Darwin/DragNDrop/help-me-print-0.1.0-Darwin/help-me-print.app/Contents/PlugIns/platforminputcontexts/: libqtvirtualkeyboardplugin.dylib
_CPack_Packages/Darwin/DragNDrop/help-me-print-0.1.0-Darwin/help-me-print.app/Contents/PlugIns/styles/: libqmacstyle.dylib
_CPack_Packages/Darwin/DragNDrop/help-me-print-0.1.0-Darwin/help-me-print.app/Contents/PlugIns/tls/: libqcertonlybackend.dylib  libqopensslbackend.dylib  libqsecuretransportbackend.dylib
_CPack_Packages/Darwin/DragNDrop/help-me-print-0.1.0-Darwin/help-me-print.app/Contents/_CodeSignature/: CodeResources
api/: .funcignore  ApiKeyAuth.cs  Easure.PrintProfiles.Api.csproj  PrinterProfilesFunctions.cs  ProfileModel.cs  RateLimitGuard.cs  package-lock.json  package.json
api/Models/: ProfileDto.cs
api/Properties/: AssemblyInfo.cs
api/src/: profileModel.js
api/src/functions/: profiles.js
api/tests/: ApiKeyAuthTests.cs  Easure.PrintProfiles.Api.Tests.csproj  ProfileModelTests.cs  profileModel.test.js
assets/icons/: help-me-print.icns
cpp/app/: CMakeLists.txt  formatters.hpp  main.cpp  main_window.cpp  main_window.hpp  qt_document_service.cpp  qt_document_service.hpp  qt_easure_profile_repository.cpp  qt_easure_profile_repository.hpp  qt_pdf_service.cpp  qt_pdf_service.hpp  qt_print_service.cpp  qt_print_service.hpp  qt_printer_service.cpp  qt_printer_service.hpp
cpp/cloud/: CMakeLists.txt  profile_repository.hpp
cpp/core/: CMakeLists.txt  types.hpp  workflow_engine.cpp  workflow_engine.hpp
cpp/platform/: CMakeLists.txt  filesystem_profile_store.cpp  filesystem_profile_store.hpp  printer_identity.cpp  printer_identity.hpp  printer_profile_resolver.cpp  printer_profile_resolver.hpp  profile_store.hpp
cpp/tests/: CMakeLists.txt  test_profile_repository.hpp  workflow_engine_tests.cpp
docs/: azure-storage.md  easure-api.md  publishing.md  static-site.md  winget-bootstrap.md
electron/: main.ts  preload.ts
electron/services/: pdfPreparation.ts  printService.ts  printerProfiles.ts  workflowEngine.ts
packaging/: installer-license.txt
packaging/homebrew/: help-me-print.rb.template
packaging/linux/: help-me-print.desktop
packaging/windows/: help-me-print.rc
script/: build_and_run.sh
scripts/: generate-winget-manifests.sh  generate_app_icons.py  package_macos_release.sh  sign_macos_app.sh
site/: index.html  robots.txt  sitemap.xml  styles.css
src/: App.tsx  styles.css  vite-env.d.ts
src/shared/: types.ts
tests/: pdfPreparation.test.ts  printerProfiles.test.ts  workflowEngine.test.ts
(+15 files in other folders)
