cmake_minimum_required(VERSION 3.21)

project(DuplexPrintCpp LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

option(DUPLEXPRINT_BUILD_TESTS "Build DuplexPrint C++ tests" ON)
option(DUPLEXPRINT_REQUIRE_QT_APP "Fail configure when the Qt desktop app target cannot be created" OFF)

set(DUPLEXPRINT_APP_NAME "Help Me Print")
set(DUPLEXPRINT_PACKAGE_NAME "help-me-print")
set(DUPLEXPRINT_PACKAGE_VENDOR "Easure")

add_subdirectory(cpp/core)
add_subdirectory(cpp/cloud)
add_subdirectory(cpp/platform)
add_subdirectory(cpp/app)

if(DUPLEXPRINT_BUILD_TESTS)
  enable_testing()
  add_subdirectory(cpp/tests)
endif()

set(CPACK_PACKAGE_NAME "${DUPLEXPRINT_PACKAGE_NAME}")
set(CPACK_PACKAGE_VENDOR "${DUPLEXPRINT_PACKAGE_VENDOR}")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Manual duplex printing for printers without automatic double-sided support")
set(CPACK_PACKAGE_CONTACT "support@easure.example")
set(CPACK_PACKAGE_VERSION "0.1.0")
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/README.md")
set(CPACK_MONOLITHIC_INSTALL ON)

if(APPLE)
  set(CPACK_GENERATOR "DragNDrop")
  set(CPACK_DMG_VOLUME_NAME "${DUPLEXPRINT_APP_NAME}")
elseif(WIN32)
  set(CPACK_GENERATOR "NSIS")
  set(CPACK_NSIS_DISPLAY_NAME "${DUPLEXPRINT_APP_NAME}")
  set(CPACK_NSIS_PACKAGE_NAME "${DUPLEXPRINT_APP_NAME}")
  set(CPACK_NSIS_CONTACT "support@easure.example")
elseif(UNIX)
  set(CPACK_GENERATOR "DEB")
  set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
  set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Easure")
  set(CPACK_DEBIAN_PACKAGE_SECTION "utils")
  set(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6")
  set(CPACK_DEBIAN_PACKAGE_DESCRIPTION "Help Me Print helps you print PDF documents double-sided on printers that do not support automatic duplex printing. It guides odd and even passes, remembers printer behavior, and reuses saved printer profiles.")
endif()

include(CPack)
